# sinan-data-app

./: .gitignore  Dockerfile  README.md  airflow.env  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  spark-defaults.conf
dags/: raw_ingest_data.py  spark_airflow.py
docker/airflow/: Dockerfile
docker/spark/: Dockerfile
jobs/: teste.py  wordcountjob.py
