[tool.poetry]
name = "sinan-data-app"
version = "0.1"
description = "O Sistema de Informação de Agravos de Notificação"
authors = ["Jorge Maciel <jorge.maciel.jr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"